// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should go to add state and match the snapshot 1`] = `
"
      <h1 style=\\"text-align: center\\">Shopping List</h1>
      <div attach=\\"portal\\"><shopping-list-add>
      <h3>Add Item</h3>
      <table>
        <tbody><tr>
          <th>Quantity</th>
          <th>Name</th>
          <th>Description</th>
        </tr>
        <tr>
          <td><input type=\\"number\\" attach=\\"quantity\\" style=\\"width: 60px\\"></td>
          <td><input type=\\"text\\" attach=\\"name\\" style=\\"width: 100px\\"></td>
          <td><input type=\\"text\\" attach=\\"description\\" style=\\"width: 300px\\"></td>
        </tr>
      </tbody></table>
      <button attach=\\"save\\">Save</button>
      <button attach=\\"back\\">Back</button>
    </shopping-list-add></div>
    "
`;

exports[`App should go to edit state and match the snapshot 1`] = `
"
      <h1 style=\\"text-align: center\\">Shopping List</h1>
      <div attach=\\"portal\\"><shopping-list-add>
      <h3>Edit</h3>
      <table>
        <tbody><tr>
          <th>Quantity</th>
          <th>Name</th>
          <th>Description</th>
        </tr>
        <tr>
          <td><input type=\\"number\\" attach=\\"quantity\\" style=\\"width: 60px\\"></td>
          <td><input type=\\"text\\" attach=\\"name\\" style=\\"width: 100px\\"></td>
          <td><input type=\\"text\\" attach=\\"description\\" style=\\"width: 300px\\"></td>
        </tr>
      </tbody></table>
      <button attach=\\"save\\">Save</button>
      <button attach=\\"back\\">Back</button>
    </shopping-list-add></div>
    "
`;

exports[`App should initialize in the home state and match the snapshot 1`] = `
"
      <h1 style=\\"text-align: center\\">Shopping List</h1>
      <div attach=\\"portal\\"><shopping-list>
      <button attach=\\"add\\" style=\\"color:#00c700\\">Add</button>
      <button attach=\\"clear\\" style=\\"color:#ff6e6e\\">Clear</button>
      <div attach=\\"list\\" style=\\"margin-top:20px; width:630px; padding:5px; background-color: #eeeeee\\"><shopping-list-element>
      <div style=\\"width: 100%; margin-top: 5px; margin-bottom: 5px;\\">
        <input attach=\\"enabled\\" type=\\"checkbox\\">
        <span style=\\"width: 30px; display: inline-block\\">1</span>
        <span style=\\"width: 100px; display: inline-block\\">Dog Food</span>
        <span style=\\"width: 300px; display: inline-block\\">30 lb bag</span>
        <button attach=\\"delete\\" style=\\"padding: 1px;\\">Delete</button>
        <button attach=\\"edit\\" style=\\"padding: 1px;\\">Edit</button>
      </div>
    </shopping-list-element><shopping-list-element>
      <div style=\\"width: 100%; margin-top: 5px; margin-bottom: 5px;\\">
        <input attach=\\"enabled\\" type=\\"checkbox\\">
        <span style=\\"width: 30px; display: inline-block\\">12</span>
        <span style=\\"width: 100px; display: inline-block\\">Foo Bars</span>
        <span style=\\"width: 300px; display: inline-block\\">1 Box</span>
        <button attach=\\"delete\\" style=\\"padding: 1px;\\">Delete</button>
        <button attach=\\"edit\\" style=\\"padding: 1px;\\">Edit</button>
      </div>
    </shopping-list-element></div>
    </shopping-list></div>
    "
`;
